tests/paczka1/fuzzy1/24204794.err
Error in line 3: 7lwKgI2fewu S597 81,5
Error in line 5: Gxk S357 45,2
Error in line 8: Tjrow S59> 14,5
Error in line 1: 9NX28Yr6 S357 83,6
Error in line 23: VQ0XPL A207 33,1
Error in line 15: n6ulbgYUQnn S597 23,6
Error in line 22: 9NX28Yr6 S791 14,0
